[project]
name = "cultural-chronicles"
version = "1.0.0"
description = "Cultural Chronicles - Heritage Archive"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.47.0",
    "streamlit-option-menu>=0.4.0",
    "pillow>=10.0.0",
    "pandas>=2.3.1",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
]
